// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $12,500.00
  </h1>
</div>
`;

exports[`should render ExpenseSummary page for 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $125.00
  </h1>
</div>
`;
